# paranut

./: .gitignore  LICENSE  Makefile  README  README.md  config  config.mk  directory-base.mk  settings.sh  settings.zsh  systemc-config.mk
.gitlab/issue_templates/: bug_report.md
.gitlab/merge_request_templates/: merge_request.md
config-creator/: LICENSE  Makefile  README.md
config-creator/src/: Makefile  app.py  controller.py  model.py  paranut.py  report_zybo7010.py  report_zybo7020.py  view.py
config-creator/test/: Makefile  test_env_variables.py  test_file_structure.py  test_python_modules.py  test_versions.py
doc-src/: .gitignore  Makefile  coding-conventions.txt  def2tex  instructions.def  paranut-manual.tex  pn_config_creator_manual.tex
doc/libparanut/: Makefile.html  annotated.html  build_2include_2paranut_8h.html  build_2include_2paranut_8h__incl.map  build_2include_2paranut_8h__incl.md5  build_2include_2paranut_8h_source.html  build_2include_2pn__config_8h_source.html  classes.html  common_8h.html  common_8h__dep__incl.map  common_8h__dep__incl.md5  common_8h__incl.map  common_8h__incl.md5  common_8h_source.html  dir_000001_000000.html  dir_000002_000000.html  dir_000003_000000.html  dir_000003_000002.html  dir_000004_000000.html  dir_000004_000002.html  dir_000005_000000.html  dir_000005_000002.html  dir_000006_000000.html  dir_000006_000002.html  dir_000007_000002.html  dir_000008_000002.html  dir_0fb67cd798913401b3a2d3cd3e6c7b91.html  dir_0fb67cd798913401b3a2d3cd3e6c7b91_dep.map  dir_0fb67cd798913401b3a2d3cd3e6c7b91_dep.md5  dir_1f640b0abd2497c94ae5c45d76817f1e.html  dir_1f640b0abd2497c94ae5c45d76817f1e_dep.map  dir_1f640b0abd2497c94ae5c45d76817f1e_dep.md5  dir_4cc507ca52e32479ef4cc7f7b918b091.html  dir_4cc507ca52e32479ef4cc7f7b918b091_dep.map  dir_4cc507ca52e32479ef4cc7f7b918b091_dep.md5  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_8f2980731aba7ec7b9fcae5764f196e3.html  dir_b737ed4574ae7a72856291c8ad069b90.html  dir_b737ed4574ae7a72856291c8ad069b90_dep.map  dir_b737ed4574ae7a72856291c8ad069b90_dep.md5  (+87 more)
doc/libparanutsim/: annotated.html  base_8cpp.html  base_8cpp__incl.map  base_8cpp__incl.md5  base_8h.html  base_8h__dep__incl.map  base_8h__dep__incl.md5  base_8h__incl.map  base_8h__incl.md5  base_8h_source.html  class_c_event_def-members.html  class_c_event_def.html  class_c_label-members.html  class_c_label.html  class_c_memory-members.html  class_c_memory.html  class_c_memory__inherit__graph.map  class_c_memory__inherit__graph.md5  class_c_perf_mon-members.html  class_c_perf_mon.html  class_c_perf_mon__coll__graph.map  class_c_perf_mon__coll__graph.md5  class_c_perf_mon__inherit__graph.map  class_c_perf_mon__inherit__graph.md5  class_c_perf_mon_c_p_u-members.html  class_c_perf_mon_c_p_u.html  class_c_perf_mon_c_p_u__coll__graph.map  class_c_perf_mon_c_p_u__coll__graph.md5  class_c_perf_mon_c_p_u__inherit__graph.map  class_c_perf_mon_c_p_u__inherit__graph.md5  class_m_arbiter-members.html  class_m_arbiter.html  class_m_arbiter__coll__graph.md5  class_m_arbiter__inherit__graph.map  class_m_arbiter__inherit__graph.md5  class_m_bank_ram-members.html  class_m_bank_ram.html  class_m_bank_ram__coll__graph.map  class_m_bank_ram__coll__graph.md5  class_m_bank_ram__inherit__graph.map  (+533 more)
hw/: Makefile
hw/sim/: Makefile  ParaNut.mk  example_wb_slave.cpp  example_wb_slave.h  pn-sim.cpp
hw/sysc/: Makefile  README.md  base.cpp  base.h  csr.cpp  csr.h  dm.cpp  dm.h  dm.tcl  exu.cpp  exu.h  exu.tcl  exu_csr.h  ifu.cpp  ifu.h  intc.cpp  lsu.h  (+18 more)
hw/sysc/module_gpio/: CMakeLists.txt  Makefile  README  gpio_wb_slave.cpp  gpio_wb_slave.h
hw/sysc/module_gpio/gpio_tb/: .gitignore  Makefile  gpio_wb_slave_tb.cpp
hw/sysc/module_uart/: .gitignore  CMakeLists.txt  Makefile  README  slib_clock_div.cpp  slib_clock_div.h  slib_clock_div_1.cpp  slib_clock_div_1.h  slib_counter.cpp  slib_counter.h  slib_edge_detect.cpp  slib_edge_detect.h  slib_fifo.cpp  slib_fifo.h  slib_fifo_11.cpp  slib_fifo_11.h  slib_input_filter.cpp  slib_input_filter.h  slib_input_filter_2.cpp  slib_input_filter_2.h  slib_input_sync.cpp  slib_input_sync.h  slib_mv_filter.cpp  slib_mv_filter.h  uart_baudgen.cpp  uart_baudgen.h  uart_interrupt.cpp  uart_interrupt.h  uart_receiver.cpp  uart_receiver.h  uart_transmitter.cpp  uart_transmitter.h  wb8_uart_16750.cpp  wb8_uart_16750.h
hw/sysc/module_uart/uart_tb/: Makefile
hw/sysc/module_uart/uart_tb/slib_clock_div/: slib_clock_div_tb.cpp
hw/sysc/module_uart/uart_tb/slib_counter/: Makefile  slib_counter_tb.cpp
hw/sysc/module_uart/uart_tb/slib_edge_detect/: Makefile  slib_edge_detect_tb.cpp
hw/sysc/module_uart/uart_tb/slib_input_filter/: Makefile  slib_input_filter_tb.cpp
hw/sysc/module_uart/uart_tb/slib_input_sync/: Makefile  slib_input_sync_tb.cpp
hw/sysc/module_uart/uart_tb/slib_mv_filter/: Makefile  slib_mv_filter_tb.cpp
hw/sysc/module_uart/uart_tb/uart_baudgen/: Makefile  uart_baudgen_tb.cpp
hw/sysc/module_uart/uart_tb/uart_interrupt/: Makefile  uart_interrupt_tb.cpp
hw/sysc/module_uart/uart_tb/uart_receiver/: Makefile  uart_receiver_tb.cpp  uart_receiver_tb.gtkw
hw/sysc/module_uart/uart_tb/uart_transmitter/: Makefile  uart_transmitter_tb.cpp
hw/sysc/module_uart/uart_tb/wb8_uart_16750/: Makefile  wb8_uart_16750_tb.cpp
sw/: Makefile  ParaNut.mk  README.md
sw/applications/mode2_demo_rust/: .gitignore  Cargo.toml  Makefile  Makefile.toml  README.md
sw/applications/mode2_demo_rust/src/: main.rs
sysc/: Makefile  base.cpp  base.h  config.template.h  dm.cpp  dm.h  dm.tcl  dm_tb.cpp  exu.cpp  exu.h  exu.tcl  ifu.cpp  ifu.h  ifu.tcl  intc.cpp  intc.h  intc.tcl  jtag_dtm.cpp  jtag_dtm.h  jtag_dtm.tcl  jtag_dtm_tb.cpp  lfsr.cpp  lfsr.h  lsu.cpp  lsu.h  lsu.tcl  memory.cpp  memory.h  memu.cpp  memu.h  memu_tb-example.sav  memu_tb.cpp  mextension.cpp  mextension.h  paranut.cpp  paranut.h  paranut_tb-example.sav  paranut_tb.cpp  paranut_tb.sav  peripherals.cpp  (+3 more)
systems/: .gitignore  Makefile  README.md
tools/: Makefile  README.md  application-base.mk  firmware.c  hal-base.mk  openocd-board.cfg  openocd-sim.cfg  paranut_flash  sysc-base.mk
(+744 files in other folders)
